# integration-test

./: .gitignore  Cargo.toml  README.md
src/: app.rs  color_utils.rs  controls.rs  main.rs  speed.rs  theme.rs
src/h_slider/: graphics.rs  mod.rs  normal.rs  style.rs  utils.rs
